# drip

./: Cargo.toml  drip specs
crates/drip_ast/: Cargo.toml
crates/drip_ast/src/: lib.rs  validation.rs
crates/drip_hir/: Cargo.toml
crates/drip_hir/src/: database.rs  lib.rs
crates/drip_lexer/: Cargo.toml
crates/drip_lexer/src/: lib.rs  token.rs
crates/drip_operator/: Cargo.toml
crates/drip_parser/: Cargo.toml
crates/drip_parser/src/: error.rs  event.rs  lib.rs  marker.rs  parser.rs  sink.rs  source.rs
crates/drip_parser/src/grammar/: decl.rs  expr.rs  func.rs  mod.rs  stmt.rs  structs.rs  types.rs
crates/drip_repl/: Cargo.toml
crates/drip_syntax/: Cargo.toml
crates/drip_syntax/src/: lib.rs
examples/drip/basic/: function.drip  function_return.drip  multiplication.drip  multiplication_auto_type.drip  multiplication_untyped.drip  walkthrough.drip
src/: main.rs
src/lexer/: mod.rs
src/parser/: expr.rs  mod.rs  operators.rs
src/syntax/: mod.rs
