[package]
name = "drip"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
rowan = "0.13.2"
eyre = "0.6.5"
color-eyre = "0.5.11"
num_enum = "0.5.4"

[dev-dependencies]
expect-test = "1.0.1"