[package]
name = "drip_ast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drip_syntax = { version = "0.1.0", path = "../drip_syntax" }
text-size = "1.1.0"

[dev-dependencies]
drip_parser = { version = "0.1.0", path = "../drip_parser" }