[package]
name = "drip_hir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drip_ast = { version = "0.1", path = "../drip_ast" }
drip_syntax = { version = "0.1", path = "../drip_syntax" }
la-arena = "0.2.0"
smol_str = "0.1.17"

[dev-dependencies]
drip_parser = { version = "0.1", path = "../drip_parser" }